--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
-    <title>Keran-Lynch Noumba – ePortfolio</title>
+    <title>KKeran-Lynch Noumba – ePortfolio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
