--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     </section>
 <section id="futur">
     <h2>Projets Futurs</h2>
-    <p>En ce qui concerne mes projets, pour ceux qui est de mes études je souhaite après le BUT continuer vers un master pour finir mes études et avoir un diplôme en 5 ans puis. Je souhaite également si j'arrive à me lancer dans le domaine professionnel devenir pentester (testeur d'intrusion). Pour cela, je compte approfondir mes compétences en cybersécurité offensive, en apprenant à maîtriser des outils comme Kali Linux, Wireshark, Metasploit et en obtenant des certifications comme CEH ou OSCP.</p>
+    <p>En ce qui concerne mes projets, pour ceux qui est de mes études je souhaite après le BUT continuer vers un master pour finir mes études et avoir un diplôme en 5 ans. Je souhaite également si j'arrive à me lancer dans le domaine professionnel devenir pentester (testeur d'intrusion). Pour cela, je compte approfondir mes compétences en cybersécurité offensive, en apprenant à maîtriser des outils comme Kali Linux, Wireshark, Metasploit et en obtenant des certifications comme CEH ou OSCP.</p>
 </section>
 <section id="contact">
     <h2>Contact</h2>
