--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
     <section id="telechargements">
         <button class="collapsible">📁 Téléchargez les documents</button>
         <div class="content">
-          <li><a href="docs/sae1.01" download>📦 Trace/preuve SAE 1.01</a></li>
-          <li><a href="docs/sae1.02" download>📦 Trace/preuve SAE 1.02</a></li>
-          <li><a href="docs/sae1.03" download>📦 Trace/preuve SAE 1.03</a></li>
-          <li><a href="docs/sae1.04" download>📦 Trace/preuve SAE 1.04</a></li>
-          <li><a href="docs/sae1.05" download>📦 Trace/preuve SAE 1.05</a></li>
-          <li><a href="docs/sae2.01" download>📦 Trace/preuve SAE 2.01</a></li>
+          <li><a href="docs/sae1.01.zip" download>📦 Trace/preuve SAE 1.01</a></li>
+          <li><a href="docs/sae1.02.zip" download>📦 Trace/preuve SAE 1.02</a></li>
+          <li><a href="docs/sae1.03.zip" download>📦 Trace/preuve SAE 1.03</a></li>
+          <li><a href="docs/sae1.04.zip" download>📦 Trace/preuve SAE 1.04</a></li>
+          <li><a href="docs/sae1.05.zip" download>📦 Trace/preuve SAE 1.05</a></li>
+          <li><a href="docs/sae2.01.zip" download>📦 Trace/preuve SAE 2.01</a></li>
         </div>
     </section>
 <section id="futur">
